--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Dikesh Manandhar</title>
+  <title>Dikesh Manandhar | Computer Engineer & Developer</title>
+  <meta name="description" content="Welcome to the official site of Dikesh Manandhar, a passionate Computer Engineering student, frontend developer, and AI enthusiast.">
+
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -26,6 +28,21 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Dikesh Manandhar",
+  "url": "https://dikeshmanandhar.com.np",
+  "sameAs": [
+    "https://www.linkedin.com/in/dikeshmanandhar",
+    "https://github.com/Dikesh-Manandhar"
+  ],
+  "jobTitle": "Computer Engineering Student",
+}
+</script>
+
 
 </head>
 
