Some additional certificates

--- a/index.html
+++ b/index.html
@@ -619,6 +619,18 @@
                     </div>
                   </div><!-- End Portfolio Item -->
 
+                  <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-code filter-featured">
+                    <div class="portfolio-content h-100">
+                      <img src="assets/img/certificates/ML_Workshop.png class="img-fluid certificates" alt="">
+                      <div class="portfolio-info">
+                        <h4>ML</h4>
+                        <p>ML with Python</p>
+                        <a href="assets/img/certificates/ML_Workshop.png" title="Coding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                        <a href="assets/Certificates/ML workshop.pdf" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                      </div>
+                    </div>
+                  </div><!-- End Portfolio Item -->
+
                   <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-debate filter-featured">
                     <div class="portfolio-content h-100">
                       <img src="assets/img/certificates/debate2.jpg" class="img-fluid certificates" alt="">
