Bruh that was such a stupid mistake :/

--- a/index.html
+++ b/index.html
@@ -607,18 +607,6 @@
                     </div>
                   </div><!-- End Portfolio Item -->
 
-                    <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-code filter-featured">
-                    <div class="portfolio-content h-100">
-                      <img src="assets/img/certificates/ML_Workshop.png class="img-fluid certificates" alt="">
-                      <div class="portfolio-info">
-                        <h4>ML</h4>
-                        <p>ML Workshop</p>
-                        <a href="assets/img/certificates/ML_Workshop.png" title="Coding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                        <a href="assets/Certificates/ML workshop.pdf" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                      </div>
-                    </div>
-                  </div><!-- End Portfolio Item -->
-
                   <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-code filter-featured">
                     <div class="portfolio-content h-100">
                       <img src="assets/img/certificates/RAC.png" class="img-fluid certificates" alt="">
@@ -627,6 +615,18 @@
                         <p>Robotics</p>
                         <a href="assets/img/certificates/RAC.png" title="Coding 5" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                         <a href="assets/Certificates/RAC.pdf" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                      </div>
+                    </div>
+                  </div><!-- End Portfolio Item -->
+
+                  <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-code filter-featured">
+                    <div class="portfolio-content h-100">
+                      <img src="assets/img/certificates/ML_Workshop.png" class="img-fluid certificates" alt="">
+                      <div class="portfolio-info">
+                        <h4>ML</h4>
+                        <p>ML Workshop</p>
+                        <a href="assets/img/certificates/ML_Workshop.png" title="Coding 6" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                        <a href="assets/Certificates/ML workshop.pdf" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                       </div>
                     </div>
                   </div><!-- End Portfolio Item -->
