--- a/index.html
+++ b/index.html
@@ -305,11 +305,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/Website.png" class="img-fluid portfolio" alt="">
+                <img src="assets/img/portfolio/NewWeb.png" class="img-fluid portfolio" alt="">
                 <div class="portfolio-info">
                   <h4>Interactive Web Portfolio</h4>
                   <p>Smooth animations and a user-friendly interface.</p>
-                  <a href="assets/img/portfolio/Website.png" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/Website.png" title="Web" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -320,8 +320,8 @@
                 <img src="assets/img/portfolio/Task.webp" class="img-fluid portfolio" alt="">
                 <div class="portfolio-info">
                   <h4>Task Management Tool</h4>
-                  <p>This task management tool helps users organize their tasks efficiently. It includes features for adding, editing, and deleting tasks.r</p>
-                  <a href="assets/img/portfolio/Task.webp" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <p>This task management tool helps users organize their tasks efficiently. It includes features for adding, editing, and deleting tasks.</p>
+                  <a href="assets/img/portfolio/Task.webp" title="App 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -334,7 +334,7 @@
                 <div class="portfolio-info">
                   <h4>Weather App</h4>
                   <p>Real-time weather updates using an external API.</p>
-                  <a href="assets/img/portfolio/weather.webp" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/weather.webp" title="App 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
