--- a/portfolio.html
+++ b/portfolio.html
@@ -343,9 +343,10 @@
 							              						</span>
           </button>
 				</div>
-                            <div class="elementor-form-text-after-description-wrapper elementor-field-group elementor-column elementor-col-100 elementor-widget-wrap">
-                          <div class="elementor-text-editor elementor-clearfix elementor-element">By signing up, you agree to our <a href="/terms-and-conditions">Terms and Conditions</a> and <a href="/privacy-policy">Privacy Policy</a>.</div>
-                      </div>
+							<div class="elementor-form-text-after-description-wrapper elementor-field-group elementor-column elementor-col-100 elementor-widget-wrap">
+								<div class="elementor-text-editor elementor-clearfix elementor-element">
+									By signing up, you agree to our <a href="#terms-and-conditions">Terms and Conditions</a> and <a href="#privacy-policy">Privacy Policy</a>.
+								</div>  </div>
             			</div>
 		</form>
 						</div>
@@ -878,8 +879,8 @@
       <h5 class="elementor-heading-title">Resources</h5>
       <ul class="twbb-nav-menu">
         <li><a href="/resume" class="twbb-item">Resume/CV</a></li>
-        <li><a href="https://substack.com/@dikesh" class="twbb-item">Blog</a></li>
-        <li><a href="portfolio-details.html"twbb-item">Projects</a></li>
+        <li><a href="https://dikesh.substack.com/" class="twbb-item">Blog</a></li>
+        <li><a href="portfolio-details.html" class="twbb-item">Projects</a></li>
       </ul>
     </div>
 
