--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div class="social-links text-center">
       <a href="https://www.linkedin.com/in/dikeshmanandhar" class="linkedin"><i class="bi bi-linkedin"></i></a>
-      <a href="https://substack.com/@dikesh" class="substack"><i class="bi bi-substack"></i></a>
+      <a href="https://dikesh.substack.com/" class="substack"><i class="bi bi-substack"></i></a>
       <a href="https://www.facebook.com/dikeshmanandhar0" class="facebook"><i class="bi bi-facebook"></i></a>
       <a href="https://www.instagram.com/lltda_/" class="instagram"><i class="bi bi-instagram"></i></a>
       <a href="https://github.com/Dikesh-Manandhar/" class="github"><i class="bi bi-github"></i></a>
