--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -131,7 +131,7 @@
               <ul>
                 <li><strong>Category</strong>: Design/Code</li>
                 <li><strong>Project date</strong>: 15 May, 2025</li>
-                <li><strong>Project Links</strong>: <a href = "portfolio.html">Link 1 </a> <a href = "https://github.com/Dikesh-Manandhar/python/blob/main/Ex/Ex_Files_Intermediate_Python_Non_Programmers_2024/Exercise%20Files/06_01_begin/todos.py">Link 2</a></li>
+                <li><strong>Project Links</strong>: <a href = "https://github.com/Dikesh-Manandhar/python/blob/main/weather.py">Weather</a> <a href = "https://github.com/Dikesh-Manandhar/python/blob/main/Ex/Ex_Files_Intermediate_Python_Non_Programmers_2024/Exercise%20Files/06_01_begin/todos.py">TodoList</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
