--- a/portfolio.html
+++ b/portfolio.html
@@ -317,21 +317,13 @@
 				</div>
 				<div class="elementor-element elementor-element-cxf4ncrf elementor-widget__width-initial elementor-widget-mobile__width-inherit elementor-widget-tablet__width-initial elementor-mobile-button-align-stretch elementor-button-align-center elementor-invisible elementor-widget elementor-widget-twbb_form" data-id="cxf4ncrf" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;button_width&quot;:&quot;30&quot;,&quot;step_next_label&quot;:&quot;Next&quot;,&quot;step_previous_label&quot;:&quot;Previous&quot;,&quot;step_type&quot;:&quot;number_text&quot;,&quot;step_icon_shape&quot;:&quot;circle&quot;}" data-widget_type="twbb_form.default">
 				<div class="elementor-widget-container">
-							<form class="elementor-form" method="post" >
-			<input type="hidden" name="post_id" value="26655"/>
-			<input type="hidden" name="form_id" value="cxf4ncrf"/>
-			<input type="hidden" name="referer_title" value="Home" />
+							<div class="elementor-form" role="group">
 
-							<input type="hidden" name="queried_id" value="26655"/>
 			
 			<div class="elementor-form-fields-wrapper elementor-labels-">
-								<div class="elementor-field-type-email elementor-field-group elementor-column elementor-field-group-email elementor-col-66 elementor-field-required">
-												<label for="form-field-email" class="elementor-field-label elementor-screen-only">
-								Email							</label>
-														<input size="1" type="email" name="form_fields[email]" id="form-field-email" class="elementor-field elementor-size-sm  elementor-field-textual" placeholder="Enter your email" required="required" aria-required="true">
-											</div>
+								<!-- Email input removed; using direct Substack signup button -->
 								<div class="elementor-field-group elementor-column elementor-field-type-submit elementor-col-30 e-form__buttons">
-					<button type="submit" class="elementor-button">
+						<button type="button" class="elementor-button" onclick="window.open('https://dikesh.substack.com/', '_blank')">
 						<span >
 															<span class=" elementor-button-icon">
 																										</span>
@@ -342,13 +334,13 @@
 						<span >
 							              						</span>
           </button>
-				</div>
-							<div class="elementor-form-text-after-description-wrapper elementor-field-group elementor-column elementor-col-100 elementor-widget-wrap">
+					</div>
+						<div class="elementor-form-text-after-description-wrapper elementor-field-group elementor-column elementor-col-100 elementor-widget-wrap">
 								<div class="elementor-text-editor elementor-clearfix elementor-element">
 									By signing up, you agree to our <a href="#terms-and-conditions">Terms and Conditions</a> and <a href="#privacy-policy">Privacy Policy</a>.
 								</div>  </div>
-            			</div>
-		</form>
+						</div>
+								</div>
 						</div>
 				</div>
 				</div>
@@ -682,32 +674,28 @@
 				</div>
 				<div class="elementor-element elementor-element-sfd3iv7z elementor-widget__width-initial elementor-widget-mobile__width-inherit elementor-widget-tablet__width-initial elementor-mobile-button-align-stretch elementor-button-align-center elementor-invisible elementor-widget elementor-widget-twbb_form" data-id="sfd3iv7z" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;button_width&quot;:&quot;100&quot;,&quot;step_next_label&quot;:&quot;Next&quot;,&quot;step_previous_label&quot;:&quot;Previous&quot;,&quot;step_type&quot;:&quot;number_text&quot;,&quot;step_icon_shape&quot;:&quot;circle&quot;}" data-widget_type="twbb_form.default">
 				<div class="elementor-widget-container">
-							<form class="elementor-form" method="post" >
-			<input type="hidden" name="post_id" value="26655"/>
-			<input type="hidden" name="form_id" value="sfd3iv7z"/>
-			<input type="hidden" name="referer_title" value="Home" />
-
-							<input type="hidden" name="queried_id" value="26655"/>
-			
+							<form class="php-email-form" action="https://formsubmit.co/dikeshmanandhar13@gmail.com" method="POST" enctype="multipart/form-data">
+			<input type="hidden" name="_captcha" value="false"/>
+			<input type="hidden" name="_next" value="https://dikeshmanandhar.com.np#form-success"/>
 			<div class="elementor-form-fields-wrapper elementor-labels-above">
 								<div class="elementor-field-type-text elementor-field-group elementor-column elementor-field-group-name elementor-col-100 elementor-field-required">
 												<label for="form-field-name" class="elementor-field-label">
 								Name							</label>
-														<input size="1" type="text" name="form_fields[name]" id="form-field-name" class="elementor-field elementor-size-sm  elementor-field-textual" placeholder="Enter your name" required="required" aria-required="true">
+														<input size="1" type="text" name="name" id="form-field-name" class="elementor-field elementor-size-sm  elementor-field-textual" placeholder="Enter your name" required="required" aria-required="true">
 											</div>
 								<div class="elementor-field-type-email elementor-field-group elementor-column elementor-field-group-email elementor-col-100 elementor-field-required">
 												<label for="form-field-email" class="elementor-field-label">
 								Email							</label>
-														<input size="1" type="email" name="form_fields[email]" id="form-field-email" class="elementor-field elementor-size-sm  elementor-field-textual" placeholder="Enter your email" required="required" aria-required="true">
+														<input size="1" type="email" name="email" id="form-field-email" class="elementor-field elementor-size-sm  elementor-field-textual" placeholder="Enter your email" required="required" aria-required="true">
 											</div>
 								<div class="elementor-field-type-textarea elementor-field-group elementor-column elementor-field-group-message elementor-col-100 elementor-field-required">
 												<label for="form-field-message" class="elementor-field-label">
 								Message							</label>
-						<textarea class="elementor-field-textual elementor-field  elementor-size-sm" name="form_fields[message]" id="form-field-message" rows="4" placeholder="Type your message" required="required" aria-required="true"></textarea>				</div>
+						<textarea class="elementor-field-textual elementor-field  elementor-size-sm" name="message" id="form-field-message" rows="4" placeholder="Type your message" required="required" aria-required="true"></textarea>				</div>
 								<div class="elementor-field-type-acceptance elementor-field-group elementor-column elementor-field-group-acceptance elementor-col-100 elementor-field-required">
 							<div class="elementor-field-subgroup">
 			<span class="elementor-field-option">
-				<input type="checkbox" name="form_fields[acceptance]" id="form-field-acceptance" class="elementor-field elementor-size-sm  elementor-acceptance-field" required="required" aria-required="true">
+				<input type="checkbox" name="acceptance" id="form-field-acceptance" class="elementor-field elementor-size-sm  elementor-acceptance-field" required="required" aria-required="true">
 				<label for="form-field-acceptance">I accept the Terms</label>			</span>
 		</div>
 						</div>
