--- a/index.html
+++ b/index.html
@@ -561,6 +561,18 @@
 
                   <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-code filter-featured">
                     <div class="portfolio-content h-100">
+                      <img src="assets/img/certificates/CS50x.png" class="img-fluid certificates" alt="">
+                      <div class="portfolio-info">
+                        <h4>CS50</h4>
+                        <p>CS50's Introduction to Computer Science</p>
+                        <a href="assets/img/certificates/CS50x.png" title="Coding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                        <a href="assets/Certificates/CS50x.pdf" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                      </div>
+                    </div>
+                  </div><!-- End Portfolio Item -->
+
+                  <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-code filter-featured">
+                    <div class="portfolio-content h-100">
                       <img src="assets/img/certificates/Machine Learning Foundations Linear Algebra.jpg" class="img-fluid certificates" alt="">
                       <div class="portfolio-info">
                         <h4>ML</h4>
