Add habit tracker frontend and assets

--- a/index.html
+++ b/index.html
@@ -340,6 +340,18 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/Habit_tracker.jpeg" class="img-fluid portfolio" alt="">
+                <div class="portfolio-info">
+                  <h4>Habit Tracker App</h4>
+                  <p>Build better habits with daily tracking, streaks, and visual progress tracking.</p>
+                  <a href="assets/img/portfolio/Habit_tracker.jpeg" title="Habit Tracker" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="projects/habit-tracker/login.html" title="Try It Now" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
             <!--
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
