--- a/projects/habit-tracker/tracker.html
+++ b/projects/habit-tracker/tracker.html
@@ -20,6 +20,19 @@
             </div>
         </section>
 
+        <section class="weekly-section">
+            <div class="weekly-card">
+                <div class="weekly-header">
+                    <div>
+                        <h2>Weekly Overview</h2>
+                        <p class="weekly-subtitle">Quickly check off this week's days for all habits.</p>
+                    </div>
+                    <div class="weekly-range" id="weeklyRange"></div>
+                </div>
+                <div id="weeklyGrid" class="weekly-grid"></div>
+            </div>
+        </section>
+
         <section class="habits-container" id="habitsContainer">
             <!-- Habits will be dynamically added here -->
         </section>
@@ -31,6 +44,6 @@
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="app-backend.js"></script>
 </body>
 </html>
