--- a/portfolio.html
+++ b/portfolio.html
@@ -624,6 +624,64 @@
 				</div>
 				</div>
 				</div>
+				<div class="elementor-element elementor-element-wxna0hk2 elementor-widget__width-initial elementor-widget-mobile__width-inherit elementor-widget-tablet__width-initial elementor-widget-divider--view-line elementor-widget elementor-widget-divider" data-id="wxna0hk2" data-element_type="widget" data-widget_type="divider.default">
+				<div class="elementor-widget-container">
+							<div class="elementor-divider">
+			<span class="elementor-divider-separator">
+						</span>
+		</div>
+						</div>
+				</div>
+		<div class="elementor-element elementor-element-habittracker e-con-full e-flex e-con e-parent" data-id="habittracker" data-element_type="container">
+				<div class="elementor-element elementor-element-habitimg elementor-widget__width-initial elementor-widget-mobile__width-inherit elementor-widget-tablet__width-initial elementor-widget elementor-widget-image" data-id="habitimg" data-element_type="widget" data-widget_type="image.default" style="max-width: 450px;">
+				<div class="elementor-widget-container">
+															<img loading="lazy" width="1365" height="1024" src="assets/img/portfolio/Habit_tracker.jpeg" class="attachment-full size-full wp-image-26643" alt="Habit Tracker App" />															</div>
+				</div>
+		<div class="elementor-element elementor-element-habitcontent e-con-full e-flex e-con e-parent" data-id="habitcontent" data-element_type="container">
+				<div class="elementor-element elementor-element-habittitle elementor-invisible elementor-widget elementor-widget-heading" data-id="habittitle" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="heading.default">
+				<div class="elementor-widget-container">
+					<h5 class="elementor-heading-title elementor-size-default">Habit Tracker App</h5>				</div>
+				</div>
+				<div class="elementor-element elementor-element-habitdesc elementor-invisible elementor-widget elementor-widget-text-editor" data-id="habitdesc" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="text-editor.default">
+				<div class="elementor-widget-container">
+									A powerful web application to help users build and maintain healthy habits. Track your progress with daily check-ins, streak counters, and a visual GitHub-style activity calendar.								</div>
+				</div>
+				<div class="elementor-element elementor-element-habitinfo elementor-widget__width-initial elementor-widget-mobile__width-inherit elementor-widget-tablet__width-initial elementor-align-left elementor-icon-list--layout-inline elementor-list-item-link-full_width elementor-widget elementor-widget-icon-list" data-id="habitinfo" data-element_type="widget" data-widget_type="icon-list.default">
+				<div class="elementor-widget-container">
+							<ul class="elementor-icon-list-items elementor-inline-items">
+							<li class="elementor-icon-list-item elementor-inline-item">
+											<span class="elementor-icon-list-icon">
+							<i aria-hidden="true" class="fas fa-hashtag"></i>						</span>
+										<span class="elementor-icon-list-text">Completed in January 2026</span>
+									</li>
+								<li class="elementor-icon-list-item elementor-inline-item">
+											<span class="elementor-icon-list-icon">
+							<i aria-hidden="true" class="fas fa-hashtag"></i>						</span>
+										<span class="elementor-icon-list-text">Technologies: HTML, CSS, JavaScript</span>
+									</li>
+								<li class="elementor-icon-list-item elementor-inline-item">
+											<span class="elementor-icon-list-icon">
+							<i aria-hidden="true" class="fas fa-hashtag"></i>						</span>
+										<span class="elementor-icon-list-text">LocalStorage for data persistence</span>
+									</li>
+						</ul>
+						</div>
+				</div>
+				<div class="elementor-element elementor-element-habitbtn elementor-align-left elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="habitbtn" data-element_type="widget" data-widget_type="button.default">
+				<div class="elementor-widget-container">
+									<div class="elementor-button-wrapper">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="projects/habit-tracker/login.html">
+						<span class="elementor-button-content-wrapper">
+						<span class="elementor-button-icon">
+				<i aria-hidden="true" class="fas fa-angle-right"></i>			</span>
+									<span class="elementor-button-text">Try It Now</span>
+					</span>
+					</a>
+				</div>
+								</div>
+				</div>
+				</div>
+				</div>
 					</div>
 				</div>
 		<div class="elementor-element elementor-element-1cksb8qs twbb_section e-con-boxed e-flex e-con e-parent" data-id="1cksb8qs" data-element_type="container" id="skills" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
