--- a/projects/habit-tracker/signup.html
+++ b/projects/habit-tracker/signup.html
@@ -173,6 +173,20 @@
     </div>
 
     <script>
+        // Get API URL - works in both local and production environments
+        const getApiUrl = () => {
+            const protocol = window.location.protocol;
+            const hostname = window.location.hostname;
+            
+            if (hostname === 'localhost' || hostname === '127.0.0.1') {
+                return 'http://localhost:3000/api';
+            }
+            
+            const port = window.location.port ? `:${window.location.port}` : '';
+            return `${protocol}//${hostname}${port}/api`.replace(/:$/, '');
+        };
+
+        const API_URL = getApiUrl();
         const signupForm = document.getElementById('signupForm');
         const errorMessage = document.getElementById('errorMessage');
         const successMessage = document.getElementById('successMessage');
@@ -199,7 +213,7 @@
             signupButton.textContent = 'Creating account...';
 
             try {
-                const response = await fetch('http://localhost:3000/api/register', {
+                const response = await fetch(`${API_URL}/register`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
