Update Habit Tracker link to use custom domain habit.dikeshmanandhar.com.np

--- a/index.html
+++ b/index.html
@@ -76,7 +76,23 @@
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="#certificates"><i class="bi bi-images navicon"></i> Certificates</a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
-        <li><a href="https://habit.dikeshmanandhar.com.np/login.html" target="_blank"><i class="bi bi-calendar-check navicon"></i> Habit Tracker</a></li>
+        <!--<li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <ul>
+            <li><a href="#">Dropdown 1</a></li>
+            <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <ul>
+                <li><a href="#">Deep Dropdown 1</a></li>
+                <li><a href="#">Deep Dropdown 2</a></li>
+                <li><a href="#">Deep Dropdown 3</a></li>
+                <li><a href="#">Deep Dropdown 4</a></li>
+                <li><a href="#">Deep Dropdown 5</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Dropdown 2</a></li>
+            <li><a href="#">Dropdown 3</a></li>
+            <li><a href="#">Dropdown 4</a></li>
+          </ul>
+        </li>-->
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
@@ -331,7 +347,7 @@
                   <h4>Habit Tracker App</h4>
                   <p>Build better habits with daily tracking, streaks, and visual progress tracking.</p>
                   <a href="assets/img/portfolio/Habit_tracker.jpeg" title="Habit Tracker" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="projects/habit-tracker/login.html" title="Try It Now" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="https://habit.dikeshmanandhar.com.np/login.html" title="Try It Now" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
