Update Habit Tracker portfolio section: change tech stack to Node.js/Express/MongoDB/Railway and button text to View Project

--- a/portfolio.html
+++ b/portfolio.html
@@ -657,12 +657,12 @@
 								<li class="elementor-icon-list-item elementor-inline-item">
 											<span class="elementor-icon-list-icon">
 							<i aria-hidden="true" class="fas fa-hashtag"></i>						</span>
-										<span class="elementor-icon-list-text">Technologies: HTML, CSS, JavaScript</span>
+										<span class="elementor-icon-list-text">Technologies: Node.js, Express, MongoDB, Railway</span>
 									</li>
 								<li class="elementor-icon-list-item elementor-inline-item">
 											<span class="elementor-icon-list-icon">
 							<i aria-hidden="true" class="fas fa-hashtag"></i>						</span>
-										<span class="elementor-icon-list-text">LocalStorage for data persistence</span>
+										<span class="elementor-icon-list-text">Cloud deployment with 24/7 availability</span>
 									</li>
 						</ul>
 						</div>
@@ -670,11 +670,11 @@
 				<div class="elementor-element elementor-element-habitbtn elementor-align-left elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="habitbtn" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="projects/habit-tracker/login.html">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://habit.dikeshmanandhar.com.np/login.html">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
 				<i aria-hidden="true" class="fas fa-angle-right"></i>			</span>
-									<span class="elementor-button-text">Try It Now</span>
+									<span class="elementor-button-text">View Project</span>
 					</span>
 					</a>
 				</div>
