--- a/portfolio.html
+++ b/portfolio.html
@@ -633,7 +633,7 @@
 						</div>
 				</div>
 		<div class="elementor-element elementor-element-habittracker e-con-full e-flex e-con e-parent" data-id="habittracker" data-element_type="container">
-				<div class="elementor-element elementor-element-habitimg elementor-widget__width-initial elementor-widget-mobile__width-inherit elementor-widget-tablet__width-initial elementor-widget elementor-widget-image" data-id="habitimg" data-element_type="widget" data-widget_type="image.default" style="max-width: 450px;">
+				<div class="elementor-element elementor-element-habitimg elementor-widget__width-initial elementor-widget-mobile__width-inherit elementor-widget-tablet__width-initial elementor-widget elementor-widget-image" data-id="habitimg" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
 															<img loading="lazy" width="1365" height="1024" src="assets/img/portfolio/Habit_tracker.jpeg" class="attachment-full size-full wp-image-26643" alt="Habit Tracker App" />															</div>
 				</div>
@@ -655,15 +655,15 @@
 										<span class="elementor-icon-list-text">Completed in January 2026</span>
 									</li>
 								<li class="elementor-icon-list-item elementor-inline-item">
-											<span class="elementor-icon-list-icon">
+										<span class="elementor-icon-list-icon">
 							<i aria-hidden="true" class="fas fa-hashtag"></i>						</span>
-										<span class="elementor-icon-list-text">Technologies: Node.js, Express, MongoDB, Railway</span>
-									</li>
+									<span class="elementor-icon-list-text">Technologies: Node.js, Express, MongoDB, Railway</span>
+								</li>
 								<li class="elementor-icon-list-item elementor-inline-item">
-											<span class="elementor-icon-list-icon">
+										<span class="elementor-icon-list-icon">
 							<i aria-hidden="true" class="fas fa-hashtag"></i>						</span>
-										<span class="elementor-icon-list-text">Cloud deployment with 24/7 availability</span>
-									</li>
+									<span class="elementor-icon-list-text">Cloud deployment with 24/7 availability</span>
+								</li>
 						</ul>
 						</div>
 				</div>
