Add External Affairs position at ECAST to resume section

--- a/index.html
+++ b/index.html
@@ -527,6 +527,19 @@
 
               </ul>
             </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>External Affairs</h4>
+              <h5>January 2026 - Present</h5>
+              <p><em>ECAST, IOE Thapathali Campus</em></p>
+              <ul>
+                <li>Manage external relationships and partnerships with industry professionals and stakeholders.</li>
+                <li>Coordinate networking events and conferences to enhance organizational visibility.</li>
+                <li>Develop communication strategies to strengthen institutional reputation.</li>
+                <li>Foster collaboration between the college and external organizations for mutual growth.</li>
+
+              </ul>
+            </div><!-- Edn Resume Item -->
            
             <!--<div class="resume-item">
               <h4>Graphic design specialist</h4>
