feat: add My Habits section header and improve Safari/mobile compatibility

--- a/projects/habit-tracker/tracker.html
+++ b/projects/habit-tracker/tracker.html
@@ -36,6 +36,10 @@
         </section>
 
         <section class="add-habit-section">
+            <div class="habit-section-header">
+                <h2>🎯 My Habits</h2>
+                <p class="habit-subtitle">Build better habits, one day at a time</p>
+            </div>
             <div class="input-group">
                 <input type="text" id="habitInput" placeholder="Enter a new habit (e.g., Exercise, Read, Meditate)" maxlength="50">
                 <button id="addHabitBtn">Add Habit</button>
