chore: bust cache for habit tracker script

--- a/projects/habit-tracker/tracker.html
+++ b/projects/habit-tracker/tracker.html
@@ -70,6 +70,6 @@
         </div>
     </div>
 
-    <script src="app-backend.js"></script>
+    <script src="app-backend.js?v=20260208"></script>
 </body>
 </html>
